# Voice-Editing

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/voiceediting/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  PcmBuffer.cpp  PcmBuffer.h  VoiceEngine.cpp  VoiceEngine.h  native-lib.cpp
app/src/main/java/com/example/voiceediting/: MainActivity.kt
app/src/main/java/com/example/voiceediting/edit_audio/: MainActivity.kt
app/src/main/java/com/example/voiceediting/edit_audio/permission/: AudioPickerPermission.kt
app/src/main/java/com/example/voiceediting/permission/: AudioPickerPermission.kt
app/src/main/java/com/example/voiceediting/reverse_recording/: ReverseRecordingActivity.kt
app/src/main/java/com/example/voiceediting/ui/: MainPermission.kt  ShowActivity.kt  VideoActivity.kt
app/src/main/java/com/example/voiceediting/ui/adapter/: MusicAdapter.kt  VideoAdapter.kt
app/src/main/java/com/example/voiceediting/ui/enum/: ItemType.kt
app/src/main/java/com/example/voiceediting/utils/: NativeBridge.kt
app/src/main/res/drawable/: bgr_circle.xml
app/src/main/res/layout/: activity_main.xml  activity_main_permission.xml  activity_reverse_recording.xml  activity_show.xml  activity_video.xml  item_audio.xml  item_video.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/voiceediting/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+6 files in other folders)
